# rs-feed-parser

./: .gitignore  Cargo.toml  Makefile.toml  README.md  compose.yml
.github/workflows/: unit_test.yml
docs/: README.md
src/: lib.rs  parser.rs
src/parsers/: errors.rs  mod.rs
src/parsers/atom/: mod.rs  tests.rs
src/parsers/rss1/: mod.rs  tests.rs
src/parsers/rss2/: mod.rs  tests.rs
