[package]
name = "feed-parser"
version = "1.0.8"
edition = "2021"
description = "A simple RSS/Atom feed parser"
license = "Apache-2.0"

[dependencies]
chrono = ">=0.4.38"
quick-xml = { version = ">=0.36.2", features = ["serialize"] }
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
tokio = "1.40.0"
tokio-test = "0.4.4"
