[package]
name = "feed-parser"
version = "1.0.10"
edition = "2021"
description = "A simple RSS/Atom feed parser"
repository = "https://github.com/akitenkrad/feed-parser.git"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = ">=0.4.38"
quick-xml = { version = ">=0.36.2", features = ["serialize"] }
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
tokio = "1.40.0"
tokio-test = "0.4.4"
regex = "1.11.1"
html-escape = "0.2.13"
